--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Текущая тема -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/' + theme + '.css') }}">
+    <style>
+        .d-flex {
+            display: flex !important;
+            flex-wrap: wrap;
+            justify-content: center;
+            flex-direction: row;
+            align-content: center;
+        }
+    </style>
 </head>
 <body>
     <div class="container py-4">
