--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,7 @@
             display: flex !important;
             flex-wrap: wrap;
             justify-content: center;
-            flex-direction: row;
-            align-content: center;
+            align-content: stretch;
         }
     </style>
 </head>
